--- a/package.json
+++ b/package.json
@@ -3,12 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
+    "@mui/icons-material": "^5.14.6",
+    "@mui/material": "^5.14.6",
+    "@mui/x-data-grid": "^6.12.0",
+    "@mui/x-data-grid-generator": "^6.12.1",
+    "@mui/x-date-pickers": "^6.12.1",
+    "@tanstack/react-query": "^5.8.4",
+    "@tanstack/react-query-devtools": "^5.13.3",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
+    "clsx": "^2.0.0",
+    "encoding-japanese": "^2.0.0",
+    "nanoid": "^5.0.3",
+    "prop-types": "^15.8.1",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
-    "web-vitals": "^3.1.0"
+    "react-draggable": "^4.4.6",
+    "react-hook-form": "^7.48.2",
+    "react-loading": "^2.0.3",
+    "react-query-auth": "^2.3.0",
+    "react-router": "^6.15.0",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "^5.0.1",
+    "recharts": "^2.8.0",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2",
+    "zustand": "^4.4.6"
   },
   "overrides": {
     "@svgr/webpack": "^8.0.1",
