--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "react-hook-form": "^7.48.2",
     "react-loading": "^2.0.3",
     "react-query-auth": "^2.3.0",
-    "react-router": "^6.15.0",
-    "react-router-dom": "^6.15.0",
+    "react-router": "^6.21.3",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "recharts": "^2.8.0",
     "web-vitals": "^2.1.4",
@@ -67,6 +67,8 @@
     ]
   },
   "devDependencies": {
+    "@playwright/test": "^1.41.2",
+    "@types/node": "^20.11.16",
     "@vitejs/plugin-react": "^4.1.1",
     "jsdom": "^22.1.0",
     "vite": "^4.5.1",
